src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    LBRACE
    LBRACKET
    LIST
    NOT
    OR
    RBRACE
    RBRACKET
    STRING
    STRING_EQ
    STRING_EQUAL

Grammar

Rule 0     S' -> program
Rule 1     program -> sequence
Rule 2     sequence -> sequence block
Rule 3     sequence -> block
Rule 4     block -> function
Rule 5     block -> expression
Rule 6     function -> LPAREN DEFUN ID LPAREN param_list RPAREN expression RPAREN
Rule 7     param_list -> ID param_list
Rule 8     param_list -> ID
Rule 9     param_list -> <empty>
Rule 10    expression -> term
Rule 11    expression -> LPAREN operation RPAREN
Rule 12    term -> NUM
Rule 13    term -> ID
Rule 14    term -> NIL
Rule 15    term -> T
Rule 16    operation -> if
Rule 17    operation -> arith
Rule 18    operation -> comparation
Rule 19    operation -> call
Rule 20    operation -> especial_1
Rule 21    operation -> especial_2
Rule 22    if -> IF expression expression expression
Rule 23    arith -> PLUS expression expression
Rule 24    arith -> MINUS expression expression
Rule 25    arith -> TIMES expression expression
Rule 26    arith -> DIVIDE expression expression
Rule 27    arith -> FLOOR expression expression
Rule 28    arith -> MOD expression expression
Rule 29    arith -> EXPT expression expression
Rule 30    comparation -> EQ expression expression
Rule 31    comparation -> EQL expression expression
Rule 32    comparation -> EQUAL expression expression
Rule 33    comparation -> EQUALP expression expression
Rule 34    comparation -> NUM_EQ expression expression
Rule 35    comparation -> NUM_NEQ expression expression
Rule 36    comparation -> GT expression expression
Rule 37    comparation -> GTE expression expression
Rule 38    comparation -> LT expression expression
Rule 39    comparation -> LTE expression expression
Rule 40    call -> ID arglist
Rule 41    arglist -> expression arglist
Rule 42    arglist -> <empty>
Rule 43    especial_1 -> CAR expression
Rule 44    especial_1 -> CDR expression
Rule 45    especial_1 -> COND cond_clauses
Rule 46    cond_clauses -> <empty>
Rule 47    cond_clauses -> cond_clause cond_clauses
Rule 48    cond_clause -> LPAREN expression expression RPAREN
Rule 49    especial_2 -> CONS expression expression

Terminals, with rules where they appear

AND                  : 
CAR                  : 43
CDR                  : 44
COND                 : 45
CONS                 : 49
DEFUN                : 6
DIVIDE               : 26
EQ                   : 30
EQL                  : 31
EQUAL                : 32
EQUALP               : 33
EXPT                 : 29
FLOOR                : 27
GT                   : 36
GTE                  : 37
ID                   : 6 7 8 13 40
IF                   : 22
LBRACE               : 
LBRACKET             : 
LIST                 : 
LPAREN               : 6 6 11 48
LT                   : 38
LTE                  : 39
MINUS                : 24
MOD                  : 28
NIL                  : 14
NOT                  : 
NUM                  : 12
NUM_EQ               : 34
NUM_NEQ              : 35
OR                   : 
PLUS                 : 23
RBRACE               : 
RBRACKET             : 
RPAREN               : 6 6 11 48
STRING               : 
STRING_EQ            : 
STRING_EQUAL         : 
T                    : 15
TIMES                : 25
error                : 

Nonterminals, with rules where they appear

arglist              : 40 41
arith                : 17
block                : 2 3
call                 : 19
comparation          : 18
cond_clause          : 47
cond_clauses         : 45 47
especial_1           : 20
especial_2           : 21
expression           : 5 6 22 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 41 43 44 48 48 49 49
function             : 4
if                   : 16
operation            : 11
param_list           : 6 7
program              : 0
sequence             : 1 2
term                 : 10

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . sequence
    (2) sequence -> . sequence block
    (3) sequence -> . block
    (4) block -> . function
    (5) block -> . expression
    (6) function -> . LPAREN DEFUN ID LPAREN param_list RPAREN expression RPAREN
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 6
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    program                        shift and go to state 1
    sequence                       shift and go to state 2
    block                          shift and go to state 3
    function                       shift and go to state 4
    expression                     shift and go to state 5
    term                           shift and go to state 8

state 1

    (0) S' -> program .



state 2

    (1) program -> sequence .
    (2) sequence -> sequence . block
    (4) block -> . function
    (5) block -> . expression
    (6) function -> . LPAREN DEFUN ID LPAREN param_list RPAREN expression RPAREN
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    $end            reduce using rule 1 (program -> sequence .)
    LPAREN          shift and go to state 6
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    block                          shift and go to state 12
    function                       shift and go to state 4
    expression                     shift and go to state 5
    term                           shift and go to state 8

state 3

    (3) sequence -> block .

    LPAREN          reduce using rule 3 (sequence -> block .)
    NUM             reduce using rule 3 (sequence -> block .)
    ID              reduce using rule 3 (sequence -> block .)
    NIL             reduce using rule 3 (sequence -> block .)
    T               reduce using rule 3 (sequence -> block .)
    $end            reduce using rule 3 (sequence -> block .)


state 4

    (4) block -> function .

    LPAREN          reduce using rule 4 (block -> function .)
    NUM             reduce using rule 4 (block -> function .)
    ID              reduce using rule 4 (block -> function .)
    NIL             reduce using rule 4 (block -> function .)
    T               reduce using rule 4 (block -> function .)
    $end            reduce using rule 4 (block -> function .)


state 5

    (5) block -> expression .

    LPAREN          reduce using rule 5 (block -> expression .)
    NUM             reduce using rule 5 (block -> expression .)
    ID              reduce using rule 5 (block -> expression .)
    NIL             reduce using rule 5 (block -> expression .)
    T               reduce using rule 5 (block -> expression .)
    $end            reduce using rule 5 (block -> expression .)


state 6

    (6) function -> LPAREN . DEFUN ID LPAREN param_list RPAREN expression RPAREN
    (11) expression -> LPAREN . operation RPAREN
    (16) operation -> . if
    (17) operation -> . arith
    (18) operation -> . comparation
    (19) operation -> . call
    (20) operation -> . especial_1
    (21) operation -> . especial_2
    (22) if -> . IF expression expression expression
    (23) arith -> . PLUS expression expression
    (24) arith -> . MINUS expression expression
    (25) arith -> . TIMES expression expression
    (26) arith -> . DIVIDE expression expression
    (27) arith -> . FLOOR expression expression
    (28) arith -> . MOD expression expression
    (29) arith -> . EXPT expression expression
    (30) comparation -> . EQ expression expression
    (31) comparation -> . EQL expression expression
    (32) comparation -> . EQUAL expression expression
    (33) comparation -> . EQUALP expression expression
    (34) comparation -> . NUM_EQ expression expression
    (35) comparation -> . NUM_NEQ expression expression
    (36) comparation -> . GT expression expression
    (37) comparation -> . GTE expression expression
    (38) comparation -> . LT expression expression
    (39) comparation -> . LTE expression expression
    (40) call -> . ID arglist
    (43) especial_1 -> . CAR expression
    (44) especial_1 -> . CDR expression
    (45) especial_1 -> . COND cond_clauses
    (49) especial_2 -> . CONS expression expression

    DEFUN           shift and go to state 13
    IF              shift and go to state 22
    PLUS            shift and go to state 23
    MINUS           shift and go to state 24
    TIMES           shift and go to state 25
    DIVIDE          shift and go to state 26
    FLOOR           shift and go to state 27
    MOD             shift and go to state 28
    EXPT            shift and go to state 29
    EQ              shift and go to state 30
    EQL             shift and go to state 31
    EQUAL           shift and go to state 32
    EQUALP          shift and go to state 33
    NUM_EQ          shift and go to state 34
    NUM_NEQ         shift and go to state 35
    GT              shift and go to state 36
    GTE             shift and go to state 37
    LT              shift and go to state 38
    LTE             shift and go to state 39
    ID              shift and go to state 14
    CAR             shift and go to state 40
    CDR             shift and go to state 41
    COND            shift and go to state 42
    CONS            shift and go to state 43

    operation                      shift and go to state 15
    if                             shift and go to state 16
    arith                          shift and go to state 17
    comparation                    shift and go to state 18
    call                           shift and go to state 19
    especial_1                     shift and go to state 20
    especial_2                     shift and go to state 21

state 7

    (13) term -> ID .

    LPAREN          reduce using rule 13 (term -> ID .)
    NUM             reduce using rule 13 (term -> ID .)
    ID              reduce using rule 13 (term -> ID .)
    NIL             reduce using rule 13 (term -> ID .)
    T               reduce using rule 13 (term -> ID .)
    $end            reduce using rule 13 (term -> ID .)
    RPAREN          reduce using rule 13 (term -> ID .)


state 8

    (10) expression -> term .

    LPAREN          reduce using rule 10 (expression -> term .)
    NUM             reduce using rule 10 (expression -> term .)
    ID              reduce using rule 10 (expression -> term .)
    NIL             reduce using rule 10 (expression -> term .)
    T               reduce using rule 10 (expression -> term .)
    $end            reduce using rule 10 (expression -> term .)
    RPAREN          reduce using rule 10 (expression -> term .)


state 9

    (12) term -> NUM .

    LPAREN          reduce using rule 12 (term -> NUM .)
    NUM             reduce using rule 12 (term -> NUM .)
    ID              reduce using rule 12 (term -> NUM .)
    NIL             reduce using rule 12 (term -> NUM .)
    T               reduce using rule 12 (term -> NUM .)
    $end            reduce using rule 12 (term -> NUM .)
    RPAREN          reduce using rule 12 (term -> NUM .)


state 10

    (14) term -> NIL .

    LPAREN          reduce using rule 14 (term -> NIL .)
    NUM             reduce using rule 14 (term -> NIL .)
    ID              reduce using rule 14 (term -> NIL .)
    NIL             reduce using rule 14 (term -> NIL .)
    T               reduce using rule 14 (term -> NIL .)
    $end            reduce using rule 14 (term -> NIL .)
    RPAREN          reduce using rule 14 (term -> NIL .)


state 11

    (15) term -> T .

    LPAREN          reduce using rule 15 (term -> T .)
    NUM             reduce using rule 15 (term -> T .)
    ID              reduce using rule 15 (term -> T .)
    NIL             reduce using rule 15 (term -> T .)
    T               reduce using rule 15 (term -> T .)
    $end            reduce using rule 15 (term -> T .)
    RPAREN          reduce using rule 15 (term -> T .)


state 12

    (2) sequence -> sequence block .

    LPAREN          reduce using rule 2 (sequence -> sequence block .)
    NUM             reduce using rule 2 (sequence -> sequence block .)
    ID              reduce using rule 2 (sequence -> sequence block .)
    NIL             reduce using rule 2 (sequence -> sequence block .)
    T               reduce using rule 2 (sequence -> sequence block .)
    $end            reduce using rule 2 (sequence -> sequence block .)


state 13

    (6) function -> LPAREN DEFUN . ID LPAREN param_list RPAREN expression RPAREN

    ID              shift and go to state 44


state 14

    (40) call -> ID . arglist
    (41) arglist -> . expression arglist
    (42) arglist -> .
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    RPAREN          reduce using rule 42 (arglist -> .)
    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    arglist                        shift and go to state 45
    expression                     shift and go to state 46
    term                           shift and go to state 8

state 15

    (11) expression -> LPAREN operation . RPAREN

    RPAREN          shift and go to state 48


state 16

    (16) operation -> if .

    RPAREN          reduce using rule 16 (operation -> if .)


state 17

    (17) operation -> arith .

    RPAREN          reduce using rule 17 (operation -> arith .)


state 18

    (18) operation -> comparation .

    RPAREN          reduce using rule 18 (operation -> comparation .)


state 19

    (19) operation -> call .

    RPAREN          reduce using rule 19 (operation -> call .)


state 20

    (20) operation -> especial_1 .

    RPAREN          reduce using rule 20 (operation -> especial_1 .)


state 21

    (21) operation -> especial_2 .

    RPAREN          reduce using rule 21 (operation -> especial_2 .)


state 22

    (22) if -> IF . expression expression expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 49
    term                           shift and go to state 8

state 23

    (23) arith -> PLUS . expression expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 50
    term                           shift and go to state 8

state 24

    (24) arith -> MINUS . expression expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 51
    term                           shift and go to state 8

state 25

    (25) arith -> TIMES . expression expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 52
    term                           shift and go to state 8

state 26

    (26) arith -> DIVIDE . expression expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 53
    term                           shift and go to state 8

state 27

    (27) arith -> FLOOR . expression expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 54
    term                           shift and go to state 8

state 28

    (28) arith -> MOD . expression expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 55
    term                           shift and go to state 8

state 29

    (29) arith -> EXPT . expression expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 56
    term                           shift and go to state 8

state 30

    (30) comparation -> EQ . expression expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 57
    term                           shift and go to state 8

state 31

    (31) comparation -> EQL . expression expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 58
    term                           shift and go to state 8

state 32

    (32) comparation -> EQUAL . expression expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 59
    term                           shift and go to state 8

state 33

    (33) comparation -> EQUALP . expression expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 60
    term                           shift and go to state 8

state 34

    (34) comparation -> NUM_EQ . expression expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 61
    term                           shift and go to state 8

state 35

    (35) comparation -> NUM_NEQ . expression expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 62
    term                           shift and go to state 8

state 36

    (36) comparation -> GT . expression expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 63
    term                           shift and go to state 8

state 37

    (37) comparation -> GTE . expression expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 64
    term                           shift and go to state 8

state 38

    (38) comparation -> LT . expression expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 65
    term                           shift and go to state 8

state 39

    (39) comparation -> LTE . expression expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 66
    term                           shift and go to state 8

state 40

    (43) especial_1 -> CAR . expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 67
    term                           shift and go to state 8

state 41

    (44) especial_1 -> CDR . expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 68
    term                           shift and go to state 8

state 42

    (45) especial_1 -> COND . cond_clauses
    (46) cond_clauses -> .
    (47) cond_clauses -> . cond_clause cond_clauses
    (48) cond_clause -> . LPAREN expression expression RPAREN

    RPAREN          reduce using rule 46 (cond_clauses -> .)
    LPAREN          shift and go to state 71

    cond_clauses                   shift and go to state 69
    cond_clause                    shift and go to state 70

state 43

    (49) especial_2 -> CONS . expression expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 72
    term                           shift and go to state 8

state 44

    (6) function -> LPAREN DEFUN ID . LPAREN param_list RPAREN expression RPAREN

    LPAREN          shift and go to state 73


state 45

    (40) call -> ID arglist .

    RPAREN          reduce using rule 40 (call -> ID arglist .)


state 46

    (41) arglist -> expression . arglist
    (41) arglist -> . expression arglist
    (42) arglist -> .
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    RPAREN          reduce using rule 42 (arglist -> .)
    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 46
    arglist                        shift and go to state 74
    term                           shift and go to state 8

state 47

    (11) expression -> LPAREN . operation RPAREN
    (16) operation -> . if
    (17) operation -> . arith
    (18) operation -> . comparation
    (19) operation -> . call
    (20) operation -> . especial_1
    (21) operation -> . especial_2
    (22) if -> . IF expression expression expression
    (23) arith -> . PLUS expression expression
    (24) arith -> . MINUS expression expression
    (25) arith -> . TIMES expression expression
    (26) arith -> . DIVIDE expression expression
    (27) arith -> . FLOOR expression expression
    (28) arith -> . MOD expression expression
    (29) arith -> . EXPT expression expression
    (30) comparation -> . EQ expression expression
    (31) comparation -> . EQL expression expression
    (32) comparation -> . EQUAL expression expression
    (33) comparation -> . EQUALP expression expression
    (34) comparation -> . NUM_EQ expression expression
    (35) comparation -> . NUM_NEQ expression expression
    (36) comparation -> . GT expression expression
    (37) comparation -> . GTE expression expression
    (38) comparation -> . LT expression expression
    (39) comparation -> . LTE expression expression
    (40) call -> . ID arglist
    (43) especial_1 -> . CAR expression
    (44) especial_1 -> . CDR expression
    (45) especial_1 -> . COND cond_clauses
    (49) especial_2 -> . CONS expression expression

    IF              shift and go to state 22
    PLUS            shift and go to state 23
    MINUS           shift and go to state 24
    TIMES           shift and go to state 25
    DIVIDE          shift and go to state 26
    FLOOR           shift and go to state 27
    MOD             shift and go to state 28
    EXPT            shift and go to state 29
    EQ              shift and go to state 30
    EQL             shift and go to state 31
    EQUAL           shift and go to state 32
    EQUALP          shift and go to state 33
    NUM_EQ          shift and go to state 34
    NUM_NEQ         shift and go to state 35
    GT              shift and go to state 36
    GTE             shift and go to state 37
    LT              shift and go to state 38
    LTE             shift and go to state 39
    ID              shift and go to state 14
    CAR             shift and go to state 40
    CDR             shift and go to state 41
    COND            shift and go to state 42
    CONS            shift and go to state 43

    operation                      shift and go to state 15
    if                             shift and go to state 16
    arith                          shift and go to state 17
    comparation                    shift and go to state 18
    call                           shift and go to state 19
    especial_1                     shift and go to state 20
    especial_2                     shift and go to state 21

state 48

    (11) expression -> LPAREN operation RPAREN .

    LPAREN          reduce using rule 11 (expression -> LPAREN operation RPAREN .)
    NUM             reduce using rule 11 (expression -> LPAREN operation RPAREN .)
    ID              reduce using rule 11 (expression -> LPAREN operation RPAREN .)
    NIL             reduce using rule 11 (expression -> LPAREN operation RPAREN .)
    T               reduce using rule 11 (expression -> LPAREN operation RPAREN .)
    $end            reduce using rule 11 (expression -> LPAREN operation RPAREN .)
    RPAREN          reduce using rule 11 (expression -> LPAREN operation RPAREN .)


state 49

    (22) if -> IF expression . expression expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 75
    term                           shift and go to state 8

state 50

    (23) arith -> PLUS expression . expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 76
    term                           shift and go to state 8

state 51

    (24) arith -> MINUS expression . expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 77
    term                           shift and go to state 8

state 52

    (25) arith -> TIMES expression . expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 78
    term                           shift and go to state 8

state 53

    (26) arith -> DIVIDE expression . expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 79
    term                           shift and go to state 8

state 54

    (27) arith -> FLOOR expression . expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 80
    term                           shift and go to state 8

state 55

    (28) arith -> MOD expression . expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 81
    term                           shift and go to state 8

state 56

    (29) arith -> EXPT expression . expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 82
    term                           shift and go to state 8

state 57

    (30) comparation -> EQ expression . expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 83
    term                           shift and go to state 8

state 58

    (31) comparation -> EQL expression . expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 84
    term                           shift and go to state 8

state 59

    (32) comparation -> EQUAL expression . expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 85
    term                           shift and go to state 8

state 60

    (33) comparation -> EQUALP expression . expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 86
    term                           shift and go to state 8

state 61

    (34) comparation -> NUM_EQ expression . expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 87
    term                           shift and go to state 8

state 62

    (35) comparation -> NUM_NEQ expression . expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 88
    term                           shift and go to state 8

state 63

    (36) comparation -> GT expression . expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 89
    term                           shift and go to state 8

state 64

    (37) comparation -> GTE expression . expression
    (10) expression -> . term
    (11) expression -> . LPAREN operation RPAREN
    (12) term -> . NUM
    (13) term -> . ID
    (14) term -> . NIL
    (15) term -> . T

    LPAREN          shift and go to state 47
    NUM             shift and go to state 9
    ID              shift and go to state 7
    NIL             shift and go to state 10
    T               shift and go to state 11

    expression                     shift and go to state 90
    term                           shift and go to state 8

state 65
